[gd_scene load_steps=12 format=3 uid="uid://cc3uyq8amuc8y"]

[ext_resource type="Script" uid="uid://d2hk7lwopafdm" path="res://script/menus/main_menu.gd" id="1_1hnlc"]
[ext_resource type="Script" uid="uid://c5w6cncag6fe0" path="res://script/ParallaxBackground.gd" id="1_imvie"]
[ext_resource type="Texture2D" uid="uid://bmoi7bg8ios7x" path="res://assets/background/background_4.png" id="2_ng0o5"]
[ext_resource type="Texture2D" uid="uid://rdow48jcfkh" path="res://assets/background/background_3.png" id="3_8r73w"]
[ext_resource type="Texture2D" uid="uid://dvcij8blg7lka" path="res://assets/background/background_2.png" id="4_1hnlc"]
[ext_resource type="Texture2D" uid="uid://cjwd0dvv1utqb" path="res://assets/background/background_1.png" id="5_50h1w"]
[ext_resource type="FontFile" uid="uid://eor262uckfwj" path="res://assets/fonts/Ithaca-LVB75.ttf" id="6_8r73w"]
[ext_resource type="FontFile" uid="uid://dvv537g4db5fg" path="res://assets/fonts/PixelatedEleganceRegular-ovyAA.ttf" id="6_ng0o5"]
[ext_resource type="Script" uid="uid://ccoeiwnyr32nf" path="res://script/menus/button.gd" id="8_bre17"]
[ext_resource type="AudioStream" uid="uid://h8dsevn6gfa8" path="res://assets/sfx/click.wav" id="9_50h1w"]
[ext_resource type="AudioStream" uid="uid://buu4o06dt6hig" path="res://assets/sfx/bgm/stg_noloop008.ogg" id="10_euy4r"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_1hnlc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -102

[node name="Blackbakcground" type="ColorRect" parent="CanvasLayer"]
offset_right = 544.0
offset_bottom = 960.0
color = Color(0.00566115, 0.00566115, 0.00566115, 1)

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]
scroll_offset = Vector2(0, 0.5)
script = ExtResource("1_imvie")

[node name="StarsLayer4" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
y_sort_enabled = true
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(512, 896)

[node name="StarfieldSprite" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/StarsLayer4"]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("2_ng0o5")
centered = false
flip_v = true

[node name="StarsLayer3" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
y_sort_enabled = true
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(512, 896)

[node name="StarfieldSprite" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/StarsLayer3"]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("3_8r73w")
centered = false
flip_v = true

[node name="StarsLayer2" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
y_sort_enabled = true
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(512, 896)

[node name="StarfieldSprite" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/StarsLayer2"]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("4_1hnlc")
centered = false
flip_v = true

[node name="StarsLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
y_sort_enabled = true
motion_scale = Vector2(0.9, 0.9)
motion_mirroring = Vector2(512, 896)

[node name="StarfieldSprite" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/StarsLayer"]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("5_50h1w")
centered = false
flip_v = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenuUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenuUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 32.0
offset_right = 112.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Single Player" type="Button" parent="UI/MainMenuUI/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_8r73w")
theme_override_font_sizes/font_size = 50
text = "Single player"
script = ExtResource("8_bre17")

[node name="Co-op" type="Button" parent="UI/MainMenuUI/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("6_8r73w")
theme_override_font_sizes/font_size = 50
text = "Co-op"

[node name="Quit" type="Button" parent="UI/MainMenuUI/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_8r73w")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Label" type="Label" parent="UI/MainMenuUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 510.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_ng0o5")
theme_override_font_sizes/font_size = 50
text = "Space Shooter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_50h1w")
volume_db = -5.0

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_euy4r")

[connection signal="pressed" from="UI/MainMenuUI/VBoxContainer/Single Player" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="UI/MainMenuUI/VBoxContainer/Co-op" to="." method="_on_coop_pressed"]
[connection signal="pressed" from="UI/MainMenuUI/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
